--- a/index.html
+++ b/index.html
@@ -5,44 +5,47 @@
         <title>Project 1</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
-        <link href="css/styles.css" rel="stylesheet" type="text/css" />
+      
+
+        <style>
+			canvas {
+				position: absolute;
+				top: 0px;
+				left: 0px;
+				background: transparent;
+			}
+			#background {
+				z-index: -2;
+				border: 1px solid black;
+			}
+			#main {
+				z-index: -1;
+			}
+			#paddle {
+				z-index: 0;
+			}
+		</style>
+
 
     </head>
 
-    <body onLoad="init()">
+    <body>
 
     	<!-- The canvas for the background -->
-		<canvas id="background">
+		<canvas id="background" width="600" height="360">
 			Your browser does not support canvas. Please try again with a different browser.
 		</canvas>
 
 		<!-- The canvas for all enemy balls -->
-		<canvas id="main">
+		<canvas id="main" width="600" height="360">
 		</canvas>
 
 		<!-- The canvas for the paddle (can only move up
          one forth the screen.) -->
-		<canvas id="ship" width="600" height="360">
+		<canvas id="paddle" width="600" height="360">
 
 		</canvas>
 
-		<section id="canvas">
-
-			<article id="paddle">
-			</article>
-
-			<article id="ball">
-			</article>
-
-			<article id="score">
-			</article>
-
-			
-		</section>
-
-		<article id="restart-btn" class="example">
-			<button onclick="restartGame()" class="btn disabled">Restart</button>
-		</article>
 
 
         <script src="js/pong.js" type="text/javascript"></script>
